--- a/node-api/package.json
+++ b/node-api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node Server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +15,5 @@
   },
   "engines": {
     "node": "6.11.2"
-  },
+  }
 }
